CHANGES IN VERSION 0.10
-----------------------

USER VISIBLE CHANGES:

  o MSigGeneSetDb updated to v6.1 and data refactored out into GeneSetDb.* packages

CHANGES IN VERSION 0.6.x
------------------------

USER VISIBLE CHANGES

  o MSigDB version updated to 5.2 in 0.6.5
  o Interactive plots can be generated via iplot
  o single sample scoring methods broken out into more modular functions
  o svdScore added. Executes Jason's SVD scoring trick and also calculates
    "all the usual" prcomp stuff.
  o Adds a `[.GeneSetDb` method so we can subset the geneSets out of a GeneSetDb
    more easily. Would still like to have a fully operational subset(gdb, ...).

NEW FEATURES

  o Adds `svdGeneSetTest` method. A gene x sample expression matrix is
    transformed into a geneset x sampel matrix, and "normal" differential
    expression expression testing is run over the geneset scores.

CHANGES IN VERSION 0.4.x
------------------------

USER VISIBLE CHANGES

  o scoreSingleSamples now defualts to returning a melted data.frame of results
    (previously we returned a (list of) matrix of scores). `melted=FALSE`
    parameter was changed to `as.matrix=FALSE`

  o Internal MSigDB collections updated to v5.1 (as of v0.4.30).
    The major difference in v5.1 vs v5.0 seems to be an updated c7 (immunologic)
    collection, which comes on the heels of this paper:

      Compendium of Immune Signatures Identifies Conserved and Species-Specific
      Biology in Response to Inflammation
      http://www.cell.com/immunity/abstract/S1074-7613(15)00532-4

  o All methods now default to returning data.frame(s) instead of data.table(s)
    data.table is still used internally, however I understand that some people
    don't want to have them returned into their workspace.

    A global option (multiGSEA.df.return) is available for you to tweak this
    behavior, ie. set `options(multiGSEA.df.return='data.tabe')` to have
    `geneSets(gdb)` return a data.table instead of a data.frame.
